syntax = "proto3";

package proto.order.v1;

option go_package = "grpc/order/v1";

service OrderService {
  rpc Order(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  message item {
    string id = 1;
    int64 quantity = 2;
  }
  string id = 1;
  string user_id = 2;
  repeated item items = 3;
}

message OrderResponse {
  string result = 1;
}
